# adelic-bsd

./: .dockerignore  .flake8  .gitignore  .qcal_beacon  .qcal_repository_seal.json  ACTO_III_COMPLETE.md  AELION_IMPLEMENTATION_SUMMARY.md  AIK_IMPLEMENTATION_SUMMARY.md  ALGORITHM_COMPLETE.md  ANALYTICAL_BSD_GUIDE.md  ANALYTICAL_BSD_SUMMARY.md  ANALYTICAL_TRACE_IDENTITY_SUMMARY.md  ANALYTICAL_VERIFICATION_USAGE.md  API.md  ARCHITECTURE.md  AUTHORSHIP_DECLARATION.md  BSD_CERTIFICATE_IMPLEMENTATION_SUMMARY.md  BSD_COMPLETE_IMPLEMENTATION.md  BSD_EXECUTIVE_SUMMARY.md  BSD_FINAL_FORMALIZATION_SUMMARY.md  BSD_REDUCTION_COMPLETE_CERTIFICATE.md  BSD_REDUCTION_COMPLETE_SUMMARY.md  BSD_SPECTRAL_USER_GUIDE.md  BSD_Spectral_Certificate.qcal_beacon  BSD_YANGMILLS_IMPLEMENTATION.md  BSD_YANGMILLS_VERIFICATION_REPORT.md  BSD_YANG_MILLS_COMPLETION_REPORT.md  BSD_YANG_MILLS_EXPANSION.md  BSD_YANG_MILLS_IMPLEMENTATION_SUMMARY.md  CERTIFICATE_INDEX.md  CHANGELOG.md  CHECKLIST.md  CIERRE_FORMAL_SUMMARY.md  CITATION.cff  CI_CONSISTENCY_SUMMARY.md  CODE_OF_CONDUCT.md  COHOMOLOGY_COMPAT_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_BSD.md  CONTRIBUTING.md  (+158 more)
.github/: CODECOV_APP_INSTALLATION.md  CODECOV_INTEGRATION_SUMMARY.md  CODEOWNERS  FUNDING.yml  copilot-instructions.md
141hz/: PREREGISTRATION.md  README.md
NavierStokes/: README.md
bsd_spectral/: __init__.py  curve_sample.py  finiteness.py  heights.py  selmer.py  vacuum_energy.py
certificados/: .gitkeep  certificate_dR_uniformity_11a1.tex  certificate_dR_uniformity_14a1.tex  certificate_dR_uniformity_15a1.tex  certificate_dR_uniformity_17a1.tex  certificate_dR_uniformity_19a1.tex  certificate_dR_uniformity_20a1.tex  certificate_dR_uniformity_21a1.tex  certificate_dR_uniformity_26a1.tex  certificate_dR_uniformity_27a1.tex  certificate_dR_uniformity_32a1.tex  certificate_dR_uniformity_37a1.tex  certificate_dR_uniformity_37b1.tex  certificate_dR_uniformity_389a1.tex  certificate_dR_uniformity_43a1.tex  certificate_dR_uniformity_50a1.tex  certificate_dR_uniformity_53a1.tex  certificate_dR_uniformity_61a1.tex  certificate_dR_uniformity_67a1.tex  certificate_dR_uniformity_77a1.tex  certificate_dR_uniformity_990h1.tex  template_certificate_dR.tex
certificates/: README.md
data/: README.md  bsd_analysis_results.json  bsd_cohomology_PT.json  bsd_cohomology_dR.json  bsd_cohomology_data.json  bsd_lmfdb_10000.csv  (+4 more)
(+552 files in other folders)
